--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,23 @@ jobs:
 
           if [ $PLATFORM == "Darwin" ]; then
             echo "It's a Mac"
-            brew install llvm
+            brew install llvm@14
           else
             echo "It's a Linux"
             sudo apt update
             sudo apt install lsb-release wget software-properties-common
             wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-            sudo add-apt-repository "deb http://apt.llvm.org/focal/     llvm-toolchain-focal-13   main"
+            sudo add-apt-repository "deb http://apt.llvm.org/focal/     llvm-toolchain-focal-14   main"
             sudo apt-get update 
-            sudo apt-get install clang-13 lldb-13 libclang-13-dev llvm-13-dev
+            sudo apt-get install clang-14 lldb-14 libclang-14-dev llvm-14-dev
           fi
 
       - name: Compile examples
         run: sbt run
+
+  mergify-build-checkpoint:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: I only exist to please Mergify :(
+        run: echo "It's a sad existence but necessary"
