--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-12, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
 
           if [ $PLATFORM == "Darwin" ]; then
             echo "It's a Mac"
-            brew install llvm@14
+            brew install llvm@14 sbt
           else
             echo "It's a Linux"
             wget https://apt.llvm.org/llvm.sh
