--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,16 +1,24 @@
 version = "3.8.3"
+
 runner.dialect = scala3
 rewrite.scala3.insertEndMarkerMinLines = 10
 rewrite.scala3.removeOptionalBraces = true
 rewrite.scala3.convertToNewSyntax = true
+align.preset = more
 
 fileOverride {
   "glob:**.sbt" {
     runner.dialect = scala212source3
   }
-
-  "glob:**/project/**.*" {
+ 
+  "glob:**/project/plugins.sbt" {
     runner.dialect = scala212source3
+    newlines.topLevelStatementBlankLines = [
+      { 
+        blanks = 1,     
+        minBreaks = 0 
+      }
+    ]
   }
 }
 
